# Data-Science-Technical-assessment-92.05-

QuickSign_DataScientist_Technical_Test/: .coverage  README.md  correction.sh  lint_module.sh  pyproject.toml
QuickSign_DataScientist_Technical_Test/qsdata/: data_processing.py  science.py  text.py
QuickSign_DataScientist_Technical_Test/tests/: test_data_processing.py  test_science.py  test_text.py
