[tool.poetry]
name = "test-technique"
version = "0.1.0"
description = ""
authors = ["Quicksign"]
readme = "README.md"
packages = [{include = "qsdata"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2.0"
pytest = "^8.3.2"
scikit-learn = "^1.5.1"
unidecode = "^1.3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
isort = "*"
pylint = "*"
black = "*"
mypy = "*"

[tool.coverage.report]
show_missing = true
fail_under = 95
omit = ["**/tests/test_*.py"]


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length=80
multi_line_output = 3

[tools.poetry.dev]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
